<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_and_main_content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MediaCarousel"
        tools:ignore="MergeRootFrame">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/drawer_content"
        android:orientation="vertical"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        style="@style/MediaCarouselDrawer">

        <ImageView
            android:src="@drawable/launcher"
            android:contentDescription="@string/startup_icon_description"
            android:paddingTop="54dp"
            android:paddingLeft="84dp"
            android:paddingRight="84dp"
            android:paddingBottom="54dp"
            android:layout_width="240dp"
            android:layout_height="180dp"
            android:layout_marginBottom="8dp"
            style="@style/StartUpImageBackground" />

        <TextView
            android:id="@+id/drawer_artifact_carousel"
            android:text="@string/artifact_carousel_title"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"
            android:layout_width="240dp"
            android:layout_height="40dp"
            style="@style/MediaCarouselDrawerSelected" />

        <TextView
            android:id="@+id/drawer_preferences"
            android:text="@string/preferences_title"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"
            android:layout_width="240dp"
            android:layout_height="40dp"
            style="@style/MediaCarouselDrawerInactive"  />

        <TextView
            android:id="@+id/drawer_terms_and_conditions"
            android:text="@string/terms_and_conditions_title"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"
            android:layout_width="240dp"
            android:layout_height="40dp"
            style="@style/MediaCarouselDrawerInactive" />

        <TextView
            android:id="@+id/drawer_about"
            android:text="@string/about_title"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"
            android:layout_width="240dp"
            android:layout_height="40dp"
            style="@style/MediaCarouselDrawerInactive" />

        <TextView
            android:id="@+id/drawer_share_app"
            android:text="@string/share_app_title"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"
            android:layout_width="240dp"
            android:layout_height="40dp"
            style="@style/MediaCarouselDrawerInactive" />

        <Space
            android:layout_width="240dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/drawer_copyright"
            android:text="@string/copyright"
            android:layout_width="240dp"
            android:layout_height="24dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            style="@style/MediaCarouselDrawerCopyright"/>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
