<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ArtifactContentZone">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            style="@style/ArtifactTitleZone">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp">

                <TextView
                    android:id="@+id/source_name"
                    android:text="@string/fragment_media_carousel_source_name"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/ArtifactSourceName" />

                <TextView
                    android:id="@+id/date_added"
                    android:text="@string/fragment_media_carousel_time_added"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/ArtifactTimeAdded" />
            </LinearLayout>

            <TextView
                android:id="@+id/title"
                android:text="@string/fragment_media_carousel_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="18dp"
                style="@style/ArtifactTitle" />
        </LinearLayout>

        <Button
            android:id="@+id/debug_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Debug"
            android:visibility="gone" />

    </LinearLayout>
</merge>
